<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments_estagio.PerfilEstagiarioFragment"
    android:theme="@style/Base.Theme.TrabalhoAndroid"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        >

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/Perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perfil"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sairBotao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnsair"
            android:backgroundTint="@color/vermelho"
            android:padding="8dp"
            android:layout_margin="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <ImageView
            android:id="@+id/imagemPerfilEstagiario"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@+id/Perfil"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/botaoTirarFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btntirarfoto"
            android:padding="8dp"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imagemPerfilEstagiario"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nomeperfil"
            android:textAlignment="center"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/inputPerfil"
            android:padding="15dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@+id/botaoTirarFoto"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emailperfil"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:textAlignment="center"
            android:background="@color/inputPerfil"
            android:padding="15dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@+id/nome"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/editarEstagiario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btneditarperfil"
            android:padding="8dp"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@+id/email"/>


    </androidx.constraintlayout.widget.ConstraintLayout>



</FrameLayout>